<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@drawable/low_poly_banner_design_2203">

    <LinearLayout
        android:id="@+id/layoutContain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/technohub" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textColor="#285C0D"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/UserEmailHint"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColorHint="#285C0D" />

        <EditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/UserPasswordHint"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="#285C0D" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/buttonedit"
            android:text="@string/ButtonLogIn"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/txtLinkToSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/LinkToSignUp"
            android:textColor="#285C0D"
            android:textSize="14dp"
            android:textStyle="normal" />


    </LinearLayout>





</LinearLayout>

